wl/03-registry.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: registry
    part-of: registry
    env: tests
  name: registry
spec:
  replicas: 2
  selector:
    matchLabels:
      app: registry
      part-of: registry
      env: tests
  template:
    metadata:
      labels:
        app: registry
        part-of: registry
        env: tests
    spec:
      containers:
      - name: registry
        image: registry:2.7.1
        livnessProbe:
          httpGet:
            host: "127.0.0.1"
            port: 5001
            scheme: HTTP
            path: "/debug"
        resources:
          cpu:
            requests: "0.25"
            limits: "1"
          memory:
            requests: 512Mi
            limits: 4Gi
        volumeMounts:
        - name: registry-tls
          mountPath: "/tls"
        - name: registry-fs
          mountPath: "/var/lib/registry"
      volumes:
      - name: registry-tls
        secret: 
          secretName: registry-tls-internal
          optional: false
      - name: registry-fs
        persistentVolumeClaim:
          claimName: registry-shared-pvc
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: registry
    part-of: registry
    env: tests
  name: registry
spec:
  ports:
  - name: registry-https
    port: 443
    protocol: TCP
    targetPort: 443
  selector:
    app: registry
    part-of: registry
    env: tests
  type: ClusterIP
